# vmware-ansible

./: .ansible-lint  .yamllint  README.md  ansible.cfg  build.yml  construct.yml  deploy.yml  destroy.yml  pyproject.toml  requirements.txt  requirements.yml
inventory/: hosts
inventory/group_vars/: all.yml
roles/destroy/tasks/: main.yml
roles/destroy/vars/: main.yml
roles/nsx/add_edge_cluster/defaults/: main.yml
roles/nsx/add_edge_cluster/handlers/: main.yml
roles/nsx/add_edge_cluster/tasks/: main.yml
roles/nsx/add_edge_cluster/tests/: test.yml
roles/nsx/add_edge_cluster/vars/: main.yml
roles/nsx/add_ip_pools/defaults/: main.yml
roles/nsx/add_ip_pools/handlers/: main.yml
roles/nsx/add_ip_pools/tasks/: main.yml
roles/nsx/add_ip_pools/tests/: test.yml
roles/nsx/add_ip_pools/vars/: main.yml
roles/nsx/add_transport_node_profile/defaults/: main.yml
roles/nsx/add_transport_node_profile/handlers/: main.yml
roles/nsx/add_transport_node_profile/tasks/: main.yml
roles/nsx/add_transport_node_profile/tests/: test.yml
roles/prepare-esxi-custom-iso/defaults/: main.yml
roles/prepare-esxi-custom-iso/tasks/: main.yml
roles/prepare-esxi-custom-iso/templates/: esxi_v7.x_kickstart.j2
roles/prepare-esxi-custom-iso/tests/: test.yml
roles/prepare-esxi-custom-iso/vars/: main.yml
roles/prepare_esxi_custom_iso/: .travis.yml
roles/prepare_esxi_custom_iso/handlers/: main.yml
roles/prepare_esxi_custom_iso/tasks/: build_iso.yml  main.yml
roles/prepare_esxi_custom_iso/templates/: esxi_kickstart.j2  esxi_v6.x_kickstart.j2  esxi_v7.x_kickstart.j2
(+164 files in other folders)
