[tool.poetry]
name = "vmware-ansible"
version = "0.1.0"
description = ""
authors = ["ichisuke55 <ichisuke07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^6.2.0"
pyvmomi = "^7.0.3"
netaddr = "^0.8.0"
ansible-lint = "^6.4.0"
yamllint = "^1.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
